# cmake_template

./: CMakeLists.txt  README.md  main.c  main.cpp
